# amgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
amgl/: CMakeLists.txt
amgl/include/amgl/: amgl.hpp
amgl/src/: pch.hpp
amgl/src/core/: core.hpp
amgl/src/core/buffer_processing/: buffer_mng.cpp  buffer_mng.hpp  buffer_processing.cpp  buffers.cpp  buffers.hpp  vertex_arrays.cpp  vertex_arrays.hpp
amgl/src/core/buffers/: buffer_mng.cpp  buffer_mng.hpp  buffer_processing.cpp  buffers.cpp  buffers.hpp  vertex_arrays.cpp  vertex_arrays.hpp
amgl/src/core/context/: context.hpp  context_mng.cpp  context_mng.hpp  context_processing.cpp
amgl/src/core/context_processing/: context.cpp  context.hpp  context_mng.cpp  context_mng.hpp  context_processing.cpp
amgl/src/core/math/: common.hpp
amgl/src/core/state_processing/: context.hpp
amgl/src/core/textures/: images.cpp  images.hpp  texture_formats.hpp  texture_mng.cpp  texture_mng.hpp  texture_processing.cpp  texture_types.hpp  textures.cpp  textures.hpp
amgl/src/core/textures/internal/: converter.cpp  converter.hpp  formats.hpp  types.hpp
amgl/src/core/textures/internal/converting/: fmt_convert.hpp  integer_float_mapping.hpp  primitive.hpp  rgba32f.cpp  rgba32f.hpp  rgba8ui.cpp  rgba8ui.hpp
amgl/src/core/textures/texture_data_converting/: texture_data_converting.cpp  texture_data_converting.hpp  texture_formats.hpp  texture_input_data_types.hpp  texture_types.hpp
amgl/src/core/textures/texture_data_converting/details/: convert.hpp  rgba32f.cpp  rgba32f.hpp  rgba8.cpp  rgba8.hpp
amgl/src/core/textures/texture_data_converting/internal/: red.hpp
amgl/src/core/textures/texture_data_converting/internal_formats/: red.hpp  rgba.hpp
amgl/src/core/utils/: id_pool.cpp  id_pool.hpp  type_traits.hpp  util_func.hpp
tests/: CMakeLists.txt
tests/sandbox/: CMakeLists.txt
tests/sandbox/src/: benchmark.hpp  main.cpp
tests/sandbox/src/window/: window.cpp  window.hpp
